# KLINIKAL

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  exports.go  go.mod  go.sum  ptr.go  stdcall_exports.c  wg.conf  ws2_32.def
demo/: CMakeLists.txt  Makefile  README.md  build.sh  main.cpp
demo/cmake/clang-windows/: clang-windows.cmake  config.cmake
demo/server/: Makefile  demo-server.go
demo/winpe/: winpe.h
winsock/: addr_res.go  byte_order.go  conf_ctl.go  conn_basic.go  conn_extd.go  event_objects.go  io_multplx.go  legacy_stubs.go  lifecycle.go  log.go  misc_utils.go  name_res.go  namespaces.go  proto_svc.go  registry.go  sock_mgmt.go  stack.go  status_error.go  svc_disc.go  tx_extd.go  tx_std.go  waiter.go
